--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<script type="text/javascript" src="//widget.weatherproof.fi/weather/js/header.js" charset="utf-8"></script><script type="text/javascript">var z = fmi.saa.Header.construct(654899, "#saa-widget",  64.22728, "fi");</script><a href="/saa"><div id="saa-widget" style="width:300px; height:90px; color:black"></div></a>
-<script>
-  window.onLoad = () => {
-  const app = document.getElementById('saa-widget');
-  if (!app) {
-    console.warn("couldn't find the wrapper")
-    return;
-   }
-   app.style = "width: 180px; height: 80px; color: black;" 
+<style>
+  div {
+  max-width: 180px !important;
+    max-height: 80px !important;
   }
-</script>
+  span {
+  font-size: 16px !important;
+  }
+</style>
+<script type="text/javascript" src="//widget.weatherproof.fi/weather/js/header.js" charset="utf-8"></script><script type="text/javascript">var z = fmi.saa.Header.construct(654899, "#saa-widget",  64.22728, "fi");</script><a href="/saa"><div id="saa-widget" style="width:300px; height:90px; color:black"></div></a>
